# tap-tableau-server

./: README.md  meltano.yml  pyproject.toml  tap-tableau-server.sh  tox.ini
tap_tableau_server/: client.py  local_workbook.py  local_workbook_extractor.py  streams.py  tap.py  utils.py
tap_tableau_server/schemas/: workbook.json  workbook_connection.json  workbook_datasource.json  workbook_ids.json  workbook_relation.json  workbook_table_reference.json
tap_tableau_server/tests/: __init__.py  test_core.py
